<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

<LinearLayout
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintTop_toTopOf="parent">

    <Button
        android:id="@+id/button_file3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_button_text" />

    <Button
        android:id="@+id/button_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_button_text" />

    <Button
        android:id="@+id/button_help3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_button_text" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/menu">

    <TextView
        android:id="@+id/textView_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_text" />

    <TextView
    android:id="@+id/textView_version"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/version_text" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_text" />

    <TextView
    android:id="@+id/textView_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/email_text" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>