<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FileActivity">

<LinearLayout
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintTop_toTopOf="parent">

    <Button
        android:id="@+id/button_file2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_button_text" />

    <Button
        android:id="@+id/button_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_button_text" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/menu">

    <TextView
        android:id="@+id/textView_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path_text"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent">

    <Button
        android:id="@+id/button_confirm_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button_text" />

    <Button
        android:id="@+id/button_cancel_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_text" />
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>